--- a/src/assets/json/config.json
+++ b/src/assets/json/config.json
@@ -1,19 +1,19 @@
 {
     "service":{
         "install":{
-            "name":"Instalacion",
+            "name":"Instalación",
             "url":"./installation.png",
-            "description":"Se realiza todo tipo de instalaciones electricas a 110 Voltios, tomas especiales, tableros de distribucion, etc."
+            "description":"Se realiza todo tipo de instalaciones eléctricas a 110 Voltios, tomas especiales, tableros de distribución, etc."
         },
         "maintenance":{
             "name": "Mantenimiento",
             "url":"./setting.png",
-            "description":"Mantenimiento preventivo y correctivo de instalaciones electricas, deteccion y correcion de fugas electricas." 
+            "description":"Mantenimiento preventivo y correctivo de instalaciones eléctricas, detección y correción de fugas eléctricas." 
         },
         "consulting":{
             "name":"Asesoria",
             "url":"./consulting.png",
-            "description":"Asesoramiento en instalaciones electricas, proyectos academicos, diseño de iluminacion"
+            "description":"Asesoramiento en instalaciones eléctricas, proyectos académicos, diseño de iluminación."
         }
     }
 }
